# asteroseismology

./: .gitignore  NNFourier.ipynb  NNFourier2.ipynb  NNFourier3.ipynb  NNFourier5.ipynb  NNLightCurveF1.ipynb  NNLightCurveNewTest.ipynb  NNLightCurveProg.ipynb  NNLightCurveRSEF.ipynb  NNtest.ipynb  NNtest2.ipynb  NNtestColab.ipynb  README.md  RNN_Test_Fourier.ipynb  broomhall_replication.ipynb  loi_test.ipynb  pyproject.toml
data/: SN_ms_tot_V2.0.csv
website/: package-lock.json  package.json
website/components/: Code.js  Footer.js  Navbar.js  Profile.js  Sun.js
website/components/shaders/: Fragment.glsl  Vertex.glsl
website/pages/: _app.js  _document.js  about.js  abstract.js  background-new.js  background.js  index.js  method.js  progress1.js  results.js  solar-activity.js
website/styles/: globals.css
