[tool.poetry]
name = "asteroseismology"
version = "0.1.0"
description = ""
authors = ["Yihong Song <michaelsong4399@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lightkurve = "^1.11.3"
astropy = "^4.2"
matplotlib = "^3.3.3"
numpy = "^1.19.5"
sklearn = "^0.0"
scipy = "^1.6.0"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
